Fix file paths as they're broken on github pages

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@
 
 
 body{
-    background: no-repeat url(background/__sora_and_kairi_kingdom_hearts_and_1_more_drawn_by_nomura_tetsuya__4a9a9205493568ed112c5dd7309ee34b.jpg);
+    background: no-repeat url(./background/__sora_and_kairi_kingdom_hearts_and_1_more_drawn_by_nomura_tetsuya__4a9a9205493568ed112c5dd7309ee34b.jpg);
     background-size: auto;
 
     display: flex;
